feat: stabilize gamification with jdk 17- EXO-60517 (#548)
add necessary configuration argLine